--- a/templates/about.html
+++ b/templates/about.html
@@ -29,7 +29,7 @@
     <section>
       <h2 class="centered-heading">Figure 1</h2>
       <p>
-        <img src="https://raw.githubusercontent.com/facebookresearch/detr/main/.github/DETR.png" alt="DETR Architecture Image">
+        <img class="diagram" src="https://raw.githubusercontent.com/facebookresearch/detr/main/.github/DETR.png" alt="DETR Architecture Image">
       </p>
     </section>
     <section>
