--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
   <header>
       <h1>Image Classify AI</h1>
       <a href="/about" class="back-button">Read More</a>
+      <a href="/images" class="back-button">Image Gallery</a>
   </header>
   <main>
     <form action="/classify" method="post" enctype="multipart/form-data">
