--- a/static/style.css
+++ b/static/style.css
@@ -164,3 +164,28 @@ button[type="submit"]:hover {
 .stupid {
   margin-top: 10px;
 }
+
+/* Image gallery styles */
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 1.2rem;
+  margin: 2.5rem;
+  padding-bottom: 2.25rem;
+}
+
+.image-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem 1rem;
+
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3), 0 2px 4px -1px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  position: relative;
+}
+
+.image-card img {
+  width: 100%;
+}
