--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-  <meta charset="UTF-8"
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <title>Admin Panel</title>
 </head>
 <body> 
-  <h1>Welcome to the Admin Panel</h1>
-  <h2>Manage Image</h2>
-  <ul> 
-    <li><a href="/add_image">Add New Images</a></li>
-    <li><a href="/images">View All Images</a></li>
-    <li><a href="/delete">Delete Images</a></li>
-  </ul>
+  <header>
+      <h1>Admin Panel</h1>
+      <a href="/" class="back-button">Back</a>
+  </header>
+  <div class="image-container">
+    {% for image in image_data %}
+      <div class="image-card">
+        <img src="{{ url_for('static', filename=image["ImageFile"]) }}" alt="{{ image["ImageName"] }}">
+        <p>{{ image["ImageName"] }}</p>
+        <p>Uploaded on: {{ image["UploadDate"] }}</p>
+
+        <a href="/delete?id={{ image["ImageID"] }}">Delete</a>
+      </div>
+    {% endfor %}
+  </div>
 
 </body>
 </html>
