--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
       <h1>Image Classify AI</h1>
       <a href="/about" class="back-button">Read More</a>
       <a href="/images" class="back-button">Image Gallery</a>
+      <a href="/classes" class="back-button">View Detected Objects</a>
   </header>
   <main>
     <form action="/classify" method="post" enctype="multipart/form-data">
